add index.html and css files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
 
     <body>
-        <h1>This is my first website!</h1>
+        <!-- all content goes here -->>
             <div>
                 <nav>
 
