--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -8,14 +8,14 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: teal;
+			background-color: rgba(114, 60, 207, 0.663);
 			font-size: 300%;
 			text-align: center;
 			user-select: none;
 			display: block;
 			position: absolute;
 			top: 100px;
-			left: 0px;  /* <--- Change me! */
+			left: 250px;  /* <--- Change me! (changed on feb 22 11:09)*/
 		}
 		.board{
 			height: 100vh;
