add index.html and css files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>My Amazing first website!</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" types="image/x-icon" href ="project-instructions/favicon.ico"
+    <link rel="icon" types="image/x-icon" href
+    ="project-instructions/favicon.ico"
   </head>
   <body>
     <!--All content here-->
