--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -15,7 +15,7 @@
 			display: block;
 			position: absolute;
 			top: 100px;
-			left: 250px;  /* <--- Change me! (changed on feb 22 11:09)*/
+			left: 0px;  /* <--- Change me! (changed on feb 22 11:09)*/
 		}
 		.board{
 			height: 100vh;
@@ -49,8 +49,8 @@
 
 			// moves the Box to a new position on the screen along the X-Axis
 			function moveBoxTo(newPositionX) {
-				box.css("left", newPositionX);
-			}
+     box.css("left", newPositionX);
+  }
 
 			// changes the text displayed on the Box
 			function changeBoxText(newText) {
@@ -63,7 +63,7 @@
 			
 			// TODO 2 - Variable declarations 
 			
-
+		
 			
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -71,7 +71,7 @@
 			turn it around! 
 			*/
 			function update() {
-				
+				moveBoxTo(100)
 
 			};
 
