add bouncing box

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -50,6 +50,8 @@
 			// moves the Box to a new position on the screen along the X-Axis
 			function moveBoxTo(newPositionX) {
      box.css("left", newPositionX);
+	 box.css("top", newPositionY);
+	 
   }
 
 			// changes the text displayed on the Box
@@ -62,16 +64,32 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			
-		
-			
+			var positionX = 0;
+			var points = 0;
+			var speed = 10;
+			var positionY;
+			var speedY;
+			var boardHieght = jQuery(window).height();
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
 			turn it around! 
 			*/
 			function update() {
-				moveBoxTo(100)
+				//Frame 1
+				/*Your function call Here*/
+				positionX = positionX + speed;
+				/*your function call here*/
+				moveBoxTo(positionX, positionY);
+
+				if (positionX > boardWidth){
+					//then do X, Y and Z
+					speed = -speed;
+				}
+
+				if (positionX < 0){
+					speed = speed * -1;
+				}
 
 			};
 
@@ -81,7 +99,11 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				
+				// your code to increase the points vairable by 1
+				positionX = 0;
+				speed = speed + 3;
+				points = points + 1;
+					changeBoxText(points);
 
 
 			};
